# chiplet-network-sim

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  caculator.py
booksim_runfiles/: fig6_4x4  fig6_8x8  fig7a  fig7b
cnsim_runfiles/: fig12_1.ini  fig12_2.ini  fig12_3.ini  fig12_4.ini  fig13_1.ini  fig13_2.ini  fig13_3.ini  fig13_4.ini  fig13_5.ini  fig15_2.ini  fig15_3.ini  fig17_1.ini  fig17_2.ini  fig17_3.ini  fig17_4.ini  fig6_4x4.ini  fig6_8x8.ini  fig7a.ini  fig7b.ini  fig9_10_16K.ini  fig9_10_1K.ini  test.ini
input/: SingleChipMesh.ini  dragonfly_sw_16.ini  dragonfly_sw_32.ini  dragonfly_sw_64.ini  multiple_chip_mesh_4x4.ini  single_chip_mesh_4x4.ini  single_chip_mesh_8x8.ini
input/dragonfly/: adversary-chiplet-16.ini  adversary-sw-16.ini  allreduce-chiplet-16.ini  allreduce-sw-16.ini  dragonfly_chiplet_16.ini  dragonfly_chiplet_32.ini  dragonfly_chiplet_64.ini  dragonfly_sw_16.ini  dragonfly_sw_32.ini  dragonfly_sw_64.ini  global-chiplet-16.ini  global-chiplet-32.ini  global-sw-16.ini  global-sw-32.ini  hotspot-chiplet-16.ini  hotspot-sw-16.ini  intra-C-group-chiplet-16.ini  intra-C-group-sw-16.ini  intra-C-group.ini  local-chiplet-16.ini  local-chiplet-32.ini  local-sw-16.ini  local-sw-32.ini  multiple_chip_mesh_32x32.ini
input/hetero-link/: multiple_chip_mesh_4x4.ini  multiple_chip_mesh_8x8.ini  multiple_chip_torus_4x4.ini  multiple_chip_torus_8x8.ini  single_chip_mesh_4x4.ini  single_chip_mesh_8x8.ini
input/validation/: dragonfly_sw_16.ini  dragonfly_sw_32.ini  single_chip_mesh_4x4.ini
src/: buffer.cpp  buffer.h  chip.cpp  chip.h  config.cpp  config.h  dragonfly_chiplet.cpp  dragonfly_sw.cpp  dragonfly_sw.h  main.cpp  node.cpp  node.h  packet.cpp  packet.h  single_chip_mesh.h  single_chp_mesh.cpp  system.cpp  system.h  traffic_manager.cpp  traffic_manager.h
src/netrace/: netrace.c
src/topologies/: chip_mesh.cpp  chip_mesh.h  dragonfly_chiplet.cpp  dragonfly_chiplet.h  dragonfly_sw.cpp  dragonfly_sw.h  multiple_chip_mesh.cpp  multiple_chip_mesh.h  multiple_chip_torus.cpp  multiple_chip_torus.h  node_mesh.cpp  node_mesh.h  single_chip_mesh.cpp  single_chip_mesh.h
